appId: com.adlerventures.explora
---
- launchApp
- runFlow:
    when:
      visible: "Runtime version:.*"
    commands:
      - tapOn:
          point: "90%, 47%"
- runFlow:
    when:
      visible: "Development Servers"
    commands:
      - tapOn: "http://.*:8081"
- extendedWaitUntil:
    visible:
      id: "explore-screen"
    timeout: 20000
- tapOn: "Dev Tools"
- extendedWaitUntil:
    visible:
      id: "dev-tools-screen"
    timeout: 8000
- scrollUntilVisible:
    element:
      id: "dev-tools-reset-local-data"
    direction: DOWN
    visibilityPercentage: 50
- tapOn:
    id: "dev-tools-reset-local-data"
- tapOn: "Reset"
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: "dev-tools-reset-modes"
    direction: UP
- tapOn:
    id: "dev-tools-reset-modes"
- scrollUntilVisible:
    element:
      id: "dev-tools-catalog-mode-supplied"
    direction: UP
    visibilityPercentage: 50
